# -ai-stock-research

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Makefile  README.md  ai-stock-research-assistant-spec.html  alembic.ini  package-lock.json  package.json  pyproject.toml  requirements.lock.txt
.github/workflows/: ci.yml
apps/api/: openapi.json
apps/api/app/: main.py
apps/api/app/core/: clock.py  db.py  enums.py  errors.py  logging.py  middleware.py  pagination.py  runtime.py  settings.py  trading_calendar.py
apps/api/app/models/: __init__.py  tables.py
apps/api/app/repositories/: __init__.py  analyses.py  bars.py  documents.py  instruments.py  jobs.py  model_versions.py  predictions.py  quotes.py  watchlist.py
apps/api/app/schemas/: __init__.py  analogs.py  analyses.py  bars.py  common.py  documents.py  instruments.py  jobs.py  predictions.py  quotes.py  system.py  watchlist.py
apps/api/app/services/: __init__.py  analog_service.py  freshness.py  history_service.py  market_state.py  ports.py  prediction_service.py  (+8 more)
apps/api/scripts/: export_openapi.py
apps/api/tests/: conftest.py
apps/web/: .eslintrc.json  .gitignore  next.config.mjs  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: AddStockPanel.tsx  AnalogsPanel.tsx  AnalysisCard.tsx  AppNavigation.tsx  AppProviders.tsx  BackfillProgress.tsx  Disclaimer.tsx  DocumentsPanel.tsx  EvidenceList.tsx  HistoricalBarsChart.tsx  MarketHistoryPanel.tsx  PredictionHistoryTable.tsx  PredictionPanel.tsx  QuoteHeader.tsx  QuoteRefreshControl.tsx  ScorecardTable.tsx  Section.tsx  SourceDisplay.tsx  StateNotice.tsx  WatchlistTable.tsx
apps/web/e2e/: degradation.spec.ts  mock-api.ts  prediction.spec.ts  research.spec.ts  scorecard.spec.ts  universe-exit.spec.ts  ux-003.spec.ts  watchlist.spec.ts
apps/web/lib/: constants.ts  error-messages.ts  format.ts  prediction.ts  research-page.ts  research-pool.ts  source-display.ts  ui-state.ts
apps/web/tests/: api-client.test.ts  components.states.test.tsx  fixtures.ts  format.test.ts  quote-refresh.test.tsx  redlines.test.tsx  research-page.test.ts  research-pool.test.ts  ui-state.test.ts  use-api-resource.test.tsx  watchlist-table.test.tsx
config/: csi300_adjustments.json
config/features/: v1.yaml
config/models/: a_share_5d_lightgbm.yaml  a_share_today_lightgbm.yaml
db/migrations/: env.py  script.py.mako
db/migrations/versions/: 0001_initial_schema.py  0002_add_quote_refresh_job_type.py  0003_research_pool_and_latest_quotes.py
docs/: data-sources.md  model-card.md
infra/: Dockerfile.api  Dockerfile.openbb  Dockerfile.web  Dockerfile.worker  docker-compose.yml
infra/postgres/initdb/: 01_init.sql
outputs/网站修改建议/: 001_新手友好行情页面修改建议_2026-07-15.md  002_沪深300全量研究池与准实时行情改造建议_2026-07-15.md  003_网站用户体验与响应式改进建议_2026-07-15.md  README.md
scripts/: _common.sh  backup_db.sh  backup_loop.sh  disable_provider.sh  release.sh  rollback_app.sh  rollback_db.sh  rollback_model.sh
services/market_data/: contracts.py  csi300_history.py  ingest.py  openbb_gateway.py
services/market_data/normalization/: __init__.py  dedup.py  symbols.py  validators.py
services/market_data/tests/: conftest.py  test_csi300_history.py  test_gateway_contract.py  test_normalization.py
services/openbb_extensions/akshare_provider/: __init__.py  client.py  constants.py  provider.py  pyproject.toml  transform.py
services/openbb_extensions/akshare_provider/models/: __init__.py  company_news.py  equity_historical.py  equity_quote.py
services/openbb_extensions/cn_disclosure_provider/: __init__.py  client.py  constants.py  provider.py  pyproject.toml  transform.py
services/openbb_extensions/cn_disclosure_provider/models/: __init__.py  company_news.py
services/openbb_extensions/csi300_provider/: __init__.py  client.py  constants.py  provider.py  pyproject.toml  transform.py
services/openbb_extensions/csi300_provider/models/: __init__.py  index_constituents.py
services/openbb_extensions/tests/: conftest.py  test_akshare_allowlist.py  test_akshare_transform.py  test_cn_disclosure.py  test_csi300.py  test_provider_registration.py
services/prediction/: __init__.py
services/prediction/analogs/: __init__.py  finder.py
services/prediction/evaluation/: __init__.py  drift.py  drift_store.py  scorecard.py  settlement.py
services/prediction/features/: __init__.py  _yamlmini.py  builder.py  computers.py  config.py  panel.py  pit.py  repository.py
services/prediction/inference/: __init__.py  confidence.py  loader.py  reference_price.py  service.py
services/prediction/tests/: conftest.py  test_confidence_and_drift.py  test_dataset_and_analogs.py  test_features.py  test_leakage.py  test_pipeline_e2e.py  test_training.py
services/prediction/training/: __init__.py  artifacts.py  audit.py  baselines.py  calibration.py  cli.py  dataset.py  labels.py  metrics.py  model_config.py  pipeline.py  qlib_dataset.py  registry.py  samples.py  splits.py  trainer.py
services/research/: anomaly.py
services/research/agents/: __init__.py  analyst.py  client.py  prompts.py  repository.py  runner.py  schema.py  tools.py
services/research/evidence/: __init__.py  dto.py  errors.py  expander.py  validator.py
services/research/tests/: __init__.py  conftest.py  test_agent.py  test_anomaly.py  test_evidence.py  test_prompt_injection.py
services/worker/: runner.py  scheduler.py
services/worker/jobs/: analysis_jobs.py  market_data_jobs.py  prediction_jobs.py  tracking_scope.py
services/worker/tests/: conftest.py  test_analysis_refresh_dispatcher.py  test_dispatch.py  test_quote_refresh.py  test_runner.py  test_schedule.py
(+77 files in other folders)
