[project]
name = "ai-stock-research"
version = "0.1.0"
description = "A股 AI 研究助手 MVP：沪深300、OpenBB 统一数据网关、point-in-time 预测与可审计预测账本"
requires-python = ">=3.12,<3.13"
license = { text = "AGPL-3.0-only" }

dependencies = [
  # ── spec 硬性钉死的版本（§4.1 / §5.2），不得变更 ──────────────────────────
  # OpenBB 采用 AGPL-3.0：MVP 只允许本地个人使用，不得公开托管。
  "openbb==4.7.2",
  # 只允许被 services/openbb_extensions 调用，且只用 spec §5.2 列出的 4 个接口。
  "akshare==1.18.64",

  # ── 其余依赖不额外钉死上限：openbb 4.7.2 对 fastapi/pydantic 有强约束，
  #    在此重复钉版本只会造成 ResolutionImpossible。可复现性由
  #    requirements.lock.txt（pip freeze 产物 + SHA-256）保证，模型版本记录其哈希（§9.3.7）。
  # 量化
  "pyqlib>=0.9.7",
  "lightgbm>=4.5",
  "scikit-learn>=1.5",
  "pyarrow>=17",
  # 交易日历（上交所 XSHG）
  "exchange-calendars>=4.5",
  # API
  "fastapi>=0.128",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.9",
  "pydantic-settings>=2.7",
  # DB
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",
  # 调度与 HTTP
  "apscheduler>=3.11,<4",
  "httpx>=0.27",
  # Agent（OpenAI 兼容协议；本地 Ollama 走同一协议）
  "openai>=1.59",
]

[project.optional-dependencies]
# 同样不钉上限：openbb-core 把 ruff 当运行时依赖（>=0.15,<0.16），钉死会 ResolutionImpossible。
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "ruff>=0.15,<0.16",
  "mypy>=1.14",
  "types-python-dateutil>=2.9",
  "respx>=0.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "apps",
  "apps.api",
  "apps.api.app",
  "services",
]

[tool.ruff]
line-length = 110
target-version = "py312"
exclude = [".venv", "node_modules", "apps/web", "artifacts", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "DTZ", "RUF"]
ignore = [
  "B008",   # FastAPI Depends() 在默认参数中是惯例
  "RUF001", # 中文标点与全角字符是本项目的正常文案
  "RUF002",
  "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["E501"]
"db/migrations/**" = ["E501", "I001"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "."
exclude = ["^apps/web/", "^\\.venv/", "^db/migrations/versions/"]

[[tool.mypy.overrides]]
# 这些第三方库没有 type stub；只在 Provider 与训练层内部使用
module = [
  "akshare.*",
  "lightgbm.*",
  "sklearn.*",
  "pandas.*",
  "exchange_calendars.*",
  "apscheduler.*",
  "openbb_core.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# OpenBB 的 Data/QueryParams 基类自身没有类型标注（其 __init_subclass__ 是 untyped），
# 继承它必然触发 no-untyped-call。这是第三方库的类型缺口，不是本项目代码的问题，
# 因此只对 Provider 模型层关闭该项检查 —— 其余 strict 规则全部保留。
module = ["services.openbb_extensions.*"]
disallow_untyped_calls = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["apps/api/tests", "services"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"
markers = [
  "leakage: 未来数据泄漏测试",
  "contract: OpenBB Provider 契约测试",
  "integration: 需要数据库的集成测试",
]
filterwarnings = ["ignore::DeprecationWarning"]
